@@ -3,24 +3,40 @@ package de.samuelgesang.backend.sitemaps;
 import de.samuelgesang.backend.crawls.Crawl;
 import de.samuelgesang.backend.crawls.CrawlDiffItem;
 import de.samuelgesang.backend.crawls.CrawlRepository;
+import de.samuelgesang.backend.exceptions.SitemapException;
+import de.samuelgesang.backend.url_chunk.UrlChunk;
+import de.samuelgesang.backend.url_chunk.UrlChunkRepository;
 import de.samuelgesang.backend.sites.Site;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.time.Instant;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.zip.GZIPInputStream;
 
 @Service
 public class SitemapService {
 
-    @Autowired
-    private CrawlRepository crawlRepository;
+    private static final Logger logger = LoggerFactory.getLogger(SitemapService.class);
+    private static final int URL_CHUNK_SIZE = 1000;
 
-    public String findSitemapURL(String baseURL) throws Exception {
+    private final CrawlRepository crawlRepository;
+    private final UrlChunkRepository urlChunkRepository;
+
+    public SitemapService(CrawlRepository crawlRepository, UrlChunkRepository urlChunkRepository) {
+        this.crawlRepository = crawlRepository;
+        this.urlChunkRepository = urlChunkRepository;
+    }
+
+    public String findSitemapURL(String baseURL) throws SitemapException {
         String[] protocols = {"https://", "http://"};
         String[] subdomains = {"www.", ""};
 
@@ -34,37 +50,58 @@ public class SitemapService {
                 }
             }
         }
-        throw new Exception("No valid sitemap found for URL: " + baseURL);
+        throw new SitemapException("No valid sitemap found for URL: " + baseURL);
     }
 
     private boolean isValidSitemap(String sitemapUrl) {
         try {
-            String content = fetchContentFromURL(new URL(sitemapUrl));
+            String content = fetchContentFromURL(new URI(sitemapUrl).toURL());
             return isXML(content);
         } catch (Exception e) {
+            logger.error("Error validating sitemap URL: {}", sitemapUrl, e);
             return false;
         }
     }
 
-    private String fetchContentFromURL(URL url) throws Exception {
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-        connection.setRequestMethod("GET");
-        connection.setRequestProperty("Accept", "application/xml");
-        connection.connect();
+    private String fetchContentFromURL(URL url) throws SitemapException {
+        HttpURLConnection connection = null;
+        try {
+            connection = (HttpURLConnection) url.openConnection();
+            connection.setRequestMethod("GET");
+            connection.setRequestProperty("Accept", "application/xml");
+            connection.connect();
 
-        int responseCode = connection.getResponseCode();
-        if (responseCode != 200) {
-            throw new Exception("Failed to fetch content from URL: " + url + ". Response code: " + responseCode);
+            int responseCode = connection.getResponseCode();
+            if (responseCode != 200) {
+                throw new SitemapException("Failed to fetch content from URL: " + url + ". Response code: " + responseCode);
+            }
+
+            if (url.getPath().endsWith(".gz")) {
+                try (GZIPInputStream gzipInputStream = new GZIPInputStream(url.openStream());
+                     BufferedReader reader = new BufferedReader(new InputStreamReader(gzipInputStream))) {
+                    StringBuilder content = new StringBuilder();
+                    String line;
+                    while ((line = reader.readLine()) != null) {
+                        content.append(line);
+                    }
+                    return content.toString();
+                }
+            } else {
+                try (Scanner scanner = new Scanner(url.openStream())) {
+                    StringBuilder content = new StringBuilder();
+                    while (scanner.hasNext()) {
+                        content.append(scanner.nextLine());
+                    }
+                    return content.toString();
+                }
+            }
+        } catch (Exception e) {
+            throw new SitemapException("Error fetching content from URL: " + url, e);
+        } finally {
+            if (connection != null) {
+                connection.disconnect();
+            }
         }
-
-        Scanner scanner = new Scanner(url.openStream());
-        StringBuilder content = new StringBuilder();
-        while (scanner.hasNext()) {
-            content.append(scanner.nextLine());
-        }
-        scanner.close();
-
-        return content.toString();
     }
 
     private boolean isXML(String content) {
@@ -89,37 +126,71 @@ public class SitemapService {
         }
     }
 
-    public Crawl crawlSite(Site site) throws Exception {
-        Crawl crawl = new Crawl();
-        crawl.setSiteId(site.getId());
+    public Crawl crawlSite(Site site) throws SitemapException {
+        try {
+            logger.info("Crawling site: {} with ID: {}", site.getName(), site.getId());
+            Crawl crawl = new Crawl();
+            crawl.setSiteId(site.getId());
 
-        List<String> urls = new ArrayList<>();
-        String sitemapUrl = site.getSitemap();
-        System.out.println("Starting to fetch URLs from sitemap for site: " + sitemapUrl);
-        fetchUrlsFromSitemap(sitemapUrl, urls);
-        System.out.println("Finished fetching URLs. Total URLs found: " + urls.size());
+            List<String> urls = new ArrayList<>();
+            String sitemapUrl = site.getSitemap();
+            logger.info("Fetching URLs from sitemap: {}", sitemapUrl);
+            fetchUrlsFromSitemap(sitemapUrl, urls);
+            logger.info("Total URLs fetched: {}", urls.size());
 
-        crawl.setUrls(urls);
+            // Split URLs into chunks and save them
+            List<String> urlChunkIds = saveUrlChunks(urls, crawl.getId());
+            crawl.setUrlChunkIds(urlChunkIds);
 
-        // Set prevCrawlId if there was a previous crawl
-        List<String> crawlIds = site.getCrawlIds();
-        if (!crawlIds.isEmpty()) {
-            String prevCrawlId = crawlIds.get(crawlIds.size() - 1);
-            crawl.setPrevCrawlId(prevCrawlId);
-
-            // Fetch previous crawl
-            Crawl prevCrawl = crawlRepository.findById(prevCrawlId).orElse(null);
-            if (prevCrawl != null) {
-                List<CrawlDiffItem> diffToPrevCrawl = calculateDiff(urls, prevCrawl.getUrls());
-                System.out.println("diffToPrevCrawl: " + diffToPrevCrawl);
-                crawl.setDiffToPrevCrawl(diffToPrevCrawl);
+            // Set prevCrawlId if there was a previous crawl
+            List<String> crawlIds = site.getCrawlIds();
+            if (crawlIds == null) {
+                crawlIds = new ArrayList<>();
             }
+            if (!crawlIds.isEmpty()) {
+                String prevCrawlId = crawlIds.getLast();
+                crawl.setPrevCrawlId(prevCrawlId);
+
+                // Fetch previous crawl
+                Crawl prevCrawl = crawlRepository.findById(prevCrawlId).orElse(null);
+                if (prevCrawl != null) {
+                    List<String> prevUrls = loadUrlsFromChunks(prevCrawl.getUrlChunkIds());
+                    List<CrawlDiffItem> diffToPrevCrawl = calculateDiff(urls, prevUrls);
+                    logger.info("Site: {} - diffToPrevCrawl: {}", site.getName(), diffToPrevCrawl);
+                    crawl.setDiffToPrevCrawl(diffToPrevCrawl);
+                }
+            }
+
+            // Set finishedAt with the current timestamp in Zulu format
+            crawl.setFinishedAt(Instant.now().toString());
+
+            return crawl;
+        } catch (Exception e) {
+            logger.error("Error crawling site: {}", site.getName(), e);
+            throw new SitemapException("Error crawling site: " + site.getName(), e);
         }
+    }
 
-        // Set finishedAt with the current timestamp in Zulu format
-        crawl.setFinishedAt(Instant.now().toString());
+    private List<String> saveUrlChunks(List<String> urls, String crawlId) {
+        List<String> urlChunkIds = new ArrayList<>();
+        for (int i = 0; i < urls.size(); i += URL_CHUNK_SIZE) {
+            List<String> chunk = urls.subList(i, Math.min(i + URL_CHUNK_SIZE, urls.size()));
+            UrlChunk urlChunk = new UrlChunk();
+            urlChunk.setCrawlId(crawlId);
+            urlChunk.setUrls(chunk);
+            UrlChunk savedChunk = urlChunkRepository.save(urlChunk);
+            urlChunkIds.add(savedChunk.getId());
+        }
+        return urlChunkIds;
+    }
 
-        return crawl;
+    private List<String> loadUrlsFromChunks(List<String> urlChunkIds) {
+        List<String> urls = new ArrayList<>();
+        for (String chunkId : urlChunkIds) {
+            Optional<UrlChunk> chunk = urlChunkRepository.findById(chunkId);
+            chunk.ifPresent(urlChunk -> urls.addAll(urlChunk.getUrls()));
+        }
+        return urls;
     }
 
     private List<CrawlDiffItem> calculateDiff(List<String> currentUrls, List<String> previousUrls) {
@@ -153,42 +224,50 @@ public class SitemapService {
         return diff;
     }
 
-    private void fetchUrlsFromSitemap(String sitemapUrl, List<String> urls) throws Exception {
-        System.out.println("Fetching content from URL: " + sitemapUrl);
-        URL url = new URL(sitemapUrl);
-        String content = fetchContentFromURL(url);
-        System.out.println("Content fetched from URL: " + sitemapUrl);
+    private void fetchUrlsFromSitemap(String sitemapUrl, List<String> urls) throws SitemapException {
+        try {
+            logger.info("Fetching content from sitemap URL: {}", sitemapUrl);
+            URL url = new URI(sitemapUrl).toURL();
+            String content = fetchContentFromURL(url);
 
-        if (!isXML(content)) {
-            throw new Exception("Invalid sitemap URL: The URL returns an HTML document instead of an XML.");
+            if (!isXML(content)) {
+                throw new SitemapException("Invalid sitemap URL: The URL returns an HTML document instead of an XML.");
+            }
+
+            extractUrlsFromSitemap(content, urls);
+        } catch (Exception e) {
+            logger.error("Error fetching URLs from sitemap: {}", sitemapUrl, e);
+            throw new SitemapException("Error fetching URLs from sitemap: " + sitemapUrl, e);
         }
-
-        // Extract URLs from the XML content
-        extractUrlsFromSitemap(content, urls);
     }
 
-    private void extractUrlsFromSitemap(String content, List<String> urls) {
-        System.out.println("Extracting URLs from sitemap content.");
-        // Pattern to match <loc> tags
-        Pattern locPattern = Pattern.compile("<loc>(.*?)</loc>");
-        Matcher locMatcher = locPattern.matcher(content);
-        while (locMatcher.find()) {
-            String url = locMatcher.group(1).trim();
-            urls.add(url);  // Add the extracted URL to the list
-            // System.out.println("Found URL: " + url);  // Debug output to check extracted URLs
-        }
-
-        // Pattern to match nested <sitemap> tags and their <loc> tags
-        Pattern sitemapPattern = Pattern.compile("<sitemap>.*?<loc>(.*?)</loc>.*?</sitemap>", Pattern.DOTALL);
-        Matcher sitemapMatcher = sitemapPattern.matcher(content);
-        while (sitemapMatcher.find()) {
-            try {
-                String nestedSitemapUrl = sitemapMatcher.group(1).trim();
-                System.out.println("Found nested sitemap URL: " + nestedSitemapUrl);  // Debug output to check nested sitemap URLs
-                fetchUrlsFromSitemap(nestedSitemapUrl, urls);
-            } catch (Exception e) {
-                e.printStackTrace();  // Handle the exception or log it
+    private void extractUrlsFromSitemap(String content, List<String> urls) throws SitemapException {
+        try {
+            logger.info("Extracting URLs from sitemap content.");
+            // Pattern to match <loc> tags
+            Pattern locPattern = Pattern.compile("<loc>(.*?)</loc>");
+            Matcher locMatcher = locPattern.matcher(content);
+            while (locMatcher.find()) {
+                String url = locMatcher.group(1).trim();
+                urls.add(url);
             }
+
+            // Pattern to match nested <sitemap> tags and their <loc> tags
+            Pattern sitemapPattern = Pattern.compile("<sitemap>.*?<loc>(.*?)</loc>.*?</sitemap>", Pattern.DOTALL);
+            Matcher sitemapMatcher = sitemapPattern.matcher(content);
+            while (sitemapMatcher.find()) {
+                try {
+                    String nestedSitemapUrl = sitemapMatcher.group(1).trim();
+                    logger.info("Found nested sitemap URL: {}", nestedSitemapUrl);
+                    fetchUrlsFromSitemap(nestedSitemapUrl, urls);
+                } catch (Exception e) {
+                    logger.error("Error fetching nested sitemap: {}", sitemapMatcher.group(1).trim(), e);
+                    throw new SitemapException("Error fetching nested sitemap: " + sitemapMatcher.group(1).trim(), e);
+                }
+            }
+        } catch (Exception e) {
+            logger.error("Error extracting URLs from sitemap content.", e);
+            throw new SitemapException("Error extracting URLs from sitemap content.", e);
         }
     }
 }
